# metric-autopsy

./: .gitignore  AGENTS.md  CHANGELOG.md  CI  CITATION.cff  DATASETS.md  PROJECT.md  README.md  SKILL.md  llms.txt  pyproject.toml
examples/mi_coupling_tms/: README.md  download_data.py  notebook.ipynb
paper/: ARXIV_SUBMISSION.md  LICENSE-CC-BY-4.0.md  build_arxiv.py  main.tex  manuscript.md
references/: gates.md  prereg_template.md  red_flags.md
scripts/: run_gates.py
src/metric_autopsy/: __init__.py  cli.py  core.py  gates.py  mcp_server.py  metrics.py  qc.py  report.py
tests/: test_anndata_compat.py  test_audit_fixes.py  test_gates.py
